[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/SelectorNivel.gd" type="Script" id=1]

[node name="SelectorNivel" type="Node2D"]
script = ExtResource( 1 )

[node name="boton1" type="Button" parent="."]
margin_left = 137.0
margin_top = 227.0
margin_right = 217.0
margin_bottom = 282.0
text = "1"

[node name="boton2" type="Button" parent="."]
margin_left = 278.0
margin_top = 227.0
margin_right = 358.0
margin_bottom = 282.0
text = "2"

[node name="boton3" type="Button" parent="."]
margin_left = 418.0
margin_top = 227.0
margin_right = 498.0
margin_bottom = 282.0
text = "3"

[node name="boton4" type="Button" parent="."]
margin_left = 559.0
margin_top = 227.0
margin_right = 639.0
margin_bottom = 282.0
text = "4"

[node name="boton5" type="Button" parent="."]
margin_left = 695.0
margin_top = 227.0
margin_right = 775.0
margin_bottom = 282.0
text = "5"

[node name="boton6" type="Button" parent="."]
margin_left = 137.0
margin_top = 345.0
margin_right = 217.0
margin_bottom = 400.0
text = "6"

[node name="boton7" type="Button" parent="."]
margin_left = 278.0
margin_top = 345.0
margin_right = 358.0
margin_bottom = 400.0
text = "7"

[node name="boton8" type="Button" parent="."]
margin_left = 418.0
margin_top = 345.0
margin_right = 498.0
margin_bottom = 400.0
text = "8"

[node name="boton9" type="Button" parent="."]
margin_left = 559.0
margin_top = 345.0
margin_right = 639.0
margin_bottom = 400.0
text = "9"

[node name="boton10" type="Button" parent="."]
margin_left = 695.0
margin_top = 345.0
margin_right = 775.0
margin_bottom = 400.0
text = "10"

[node name="botonSalir" type="Button" parent="."]
margin_left = 816.0
margin_top = 467.0
margin_right = 939.0
margin_bottom = 539.0
text = "Salir"

[node name="Label" type="Label" parent="."]
margin_left = 338.0
margin_top = 2.0
margin_right = 412.0
margin_bottom = 30.0
rect_rotation = 6.4
rect_scale = Vector2( 5, 5 )
size_flags_stretch_ratio = 0.0
text = "Tree Game"
align = 1
valign = 1

[connection signal="pressed" from="boton1" to="." method="_on_boton1_pressed"]
[connection signal="pressed" from="boton2" to="." method="_on_boton2_pressed"]
[connection signal="pressed" from="boton3" to="." method="_on_boton3_pressed"]
[connection signal="pressed" from="boton4" to="." method="_on_boton4_pressed"]
[connection signal="pressed" from="boton5" to="." method="_on_boton5_pressed"]
[connection signal="pressed" from="boton6" to="." method="_on_boton6_pressed"]
[connection signal="pressed" from="boton7" to="." method="_on_boton7_pressed"]
[connection signal="pressed" from="boton8" to="." method="_on_boton8_pressed"]
[connection signal="pressed" from="boton9" to="." method="_on_boton1_pressed"]
[connection signal="pressed" from="boton10" to="." method="_on_boton10_pressed"]
[connection signal="pressed" from="botonSalir" to="." method="_on_botonSalir_pressed"]
